--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="main-banner">
                 <img class="img-device" src="img/device.png">
                 <h1>Serious Photo Art</h1>
-                <a href="#"><img class="btn-appstore" src="img/btn-appstore-small.png"></a>
+                <a href="https://itunes.apple.com/us/app/pixology/id615161013?mt=8"><img class="btn-appstore" src="img/btn-appstore-small.png"></a>
             </div>            
             
             </div> <!-- #main -->
