--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
+    
+    <div id="modal" class="modal-hide">
+        <div class="modal-bg">
+        </div>
+        <div class="video-embed">
+            <iframe width="853" height="480" src="http//www.youtube.com/embed/NPurPqAaM-E?rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+    
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
         <div class="header-container">
-            <div class="pixology-icn"></div>
+            <a href="#" class="play-btn"><div class="pixology-icn"></div></a>
         </div>
 
         <div class="main-container">
