--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <div class="modal-bg">
         </div>
         <div class="video-embed">
-            <iframe width="853" height="480" src="http//www.youtube.com/embed/NPurPqAaM-E?rel=0" frameborder="0" allowfullscreen></iframe>
+            <video controls>
+              <source src="video/pixology-video.mp4" type="video/mp4">
+              <source src="video/pixology-video.ogg" type="video/ogg">
+              <source src="video/pixology-video.webm" type="video/webm">
+            </video>
         </div>
     </div>
     
