fixing video js code

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         <div class="modal-bg">
         </div>
         <div class="video-embed">
-            <video controls>
+            <video controls id="video1">
               <source src="video/pixology-video.mp4" type="video/mp4">
               <source src="video/pixology-video.ogg" type="video/ogg">
               <source src="video/pixology-video.webm" type="video/webm">
+              HTML5 Video is required for this example. 
+                <a href="video/pixology-video.mp4">Download the video</a> file.
             </video>
         </div>
     </div>
