adding close button for video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div id="modal" class="modal-hide">
         <div class="modal-bg">
         </div>
+        <div class="embed-container">
         <div class="video-embed">
+        <a href="#" class="btn-close"><img src="img/btn-close.png" border="0" /></a>
             <video controls id="video1">
               <source src="video/pixology-video.mp4" type="video/mp4">
               <source src="video/pixology-video.ogg" type="video/ogg">
@@ -29,6 +31,7 @@
               HTML5 Video is required for this example. 
                 <a href="video/pixology-video.mp4">Download the video</a> file.
             </video>
+        </div>
         </div>
     </div>
     
