fix video size for ipad

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="embed-container">
         <div class="video-embed">
         <a href="#" class="btn-close"><img src="img/btn-close.png" border="0" /></a>
-            <video controls id="video1" width="640">
+            <video controls id="video1">
               <source src="video/pixology-video.mp4" type="video/mp4">
               <source src="video/pixology-video.ogg" type="video/ogg">
               <source src="video/pixology-video.webm" type="video/webm">
