Added Mixpanel badge

--- a/index.html
+++ b/index.html
@@ -122,9 +122,18 @@ mixpanel.init("0b80b4a8f3fd39961e17f7d2661b54cc");</script><!-- end Mixpanel -->
                 <a href="http://instagram.com/pixologyapp"><img src="img/icn-instagram.png" border="0" /></a>
                 <a href="https://twitter.com/PixologyApp"><img src="img/icn-twitter.png" border="0" /></a>
 <!--                 <img src="img/icn-facebook.png" border="0" /> -->
-                
+
                 </div>
-                
+
+            </footer>
+        </div>
+
+        <div>
+            <footer class="wrapper">
+                <br/>
+                <a href="https://mixpanel.com/f/partner"><img src="http://cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a>
+                <br/>
+                <br/>
             </footer>
         </div>
 
@@ -132,10 +141,9 @@ mixpanel.init("0b80b4a8f3fd39961e17f7d2661b54cc");</script><!-- end Mixpanel -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <script src="js/vendor/jquery-1.10.1.min.js"></script>
         <script src="js/main.js"></script>
-
-<script type="text/javascript">
-    mixpanel.track_links(".appstore-btn", "App Store Clickthrough");
-</script>
+        <script type="text/javascript">
+            mixpanel.track_links(".appstore-btn", "App Store Clickthrough");
+        </script>
 
     </body>
 </html>
